SERVER-55314: Serialize transaction if it contains a command op in tenant migrations